[aliases]
test=pytest

[metadata]
author = Jim Persson
author_email = jim@nurd.se
url = https://github.com/blejdfist/pycodegen
license = MIT
license_file = LICENSE
platform = any
description = Simple code generation tool with support for multiple types of inputs
long_description = file: README.rst
keywords = code generation, libclang, codegenerator
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Pre-processors
    Topic :: Utilities